removed grid on productContent, fixed with gap on productOverview

--- a/src/css_modules/purchaseOptions.module.css
+++ b/src/css_modules/purchaseOptions.module.css
@@ -2,12 +2,8 @@
   max-width: 99rem;
   margin: 0 auto;
   display: flex;
+  gap: 3rem;
   .productContent {
-    grid-area: content;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 2rem;
-
     .productGallery .mainImage {
       display: flex;
       justify-content: center;
